--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <script type="text/javascript" src="lib/jsfxr.min.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <style type="text/css">
         html, body { height: 100%; margin:0; padding:0; overflow: hidden; }
