--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <!--<script type="text/javascript" src="lib/jsfxr.min.js"></script>-->
     <script type="text/javascript" src="lib/jsfxr.min.js"></script>
-    <script type="text/javascript" src="lib/sequencer.min.js"></script>
+    <script type="text/javascript" src="lib/sequencer.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <style type="text/css">
         html, body { height: 100%; margin:0; padding:0; overflow: hidden; }
