--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     </style>
 </head>
 <body>
-    <canvas id="game" width="1024" height="768"></canvas>
+    <canvas id="g" width="1024" height="768"></canvas>
 </body>
 </html>
