bugfixes, some default maps, finalized for 13k entry.

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <script type="text/javascript" src="lib/jsfxr.min.js"></script>
-    <script type="text/javascript" src="lib/sequencer.min.js"></script>
-    <!--<script type="text/javascript" src="game.min.js"></script>-->
-    <script type="text/javascript" src="game.js"></script>
-    <style type="text/css">
-        html, body { height: 100%; margin:0; padding:0; overflow: hidden; }
-    </style>
+<script src="lib/jsfxr.min.js"></script>
+<script src="lib/seq.min.js"></script>
+<script src="game.min.js"></script>
+<style>body{text-align: center; background: #000;}</style>
 </head>
-<body>
-    <canvas id="g" width="1024" height="768"></canvas>
-</body>
+<body><canvas id="g" width="1024" height="768"></canvas></body>
 </html>
