"Final" for 13k games.. had to minify more stuff bcuz ppmd zip algorithm generated zip was not ok.

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,1 @@
-<!doctype html>
-<html>
-<head>
-<script src="lib/jsfxr.min.js"></script>
-<script src="lib/seq.min.js"></script>
-<script src="game.min.js"></script>
-<style>body{text-align: center; background: #000;}</style>
-</head>
-<body><canvas id="g" width="1024" height="768"></canvas></body>
-</html>
+<!doctype html><html><head><script src="c.js"></script><style>body{text-align: center; background: #000;}</style></head><body><canvas id="g" width="1024" height="768"></canvas></body></html>
